updated feature section

--- a/client/package.json
+++ b/client/package.json
@@ -39,9 +39,12 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@tabler/icons": "^3.23.0",
+    "@tabler/icons-react": "^3.23.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.12.0",
