--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "server",
+  "name": "adaptiveflow",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "tsc  && node ./dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node dist/index\" "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "@types/node": "^22.5.0",
+    "dotenv": "^16.4.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
-    "install": "^0.13.0",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "tsc-watch": "^6.2.0"
   }
 }
