--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons": "^3.23.0",
     "@tabler/icons-react": "^3.23.0",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -49,13 +50,16 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.12.0",
     "input-otp": "^1.4.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next": "^14.2.6",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
@@ -65,6 +69,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
