--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.12.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.462.0",
+    "mongoose": "^8.8.3",
     "next": "^14.2.6",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
@@ -60,6 +61,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
+    "svix": "^1.42.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
