--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "tsc-watch": "^6.2.0"
   }
 }
