--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
