--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons": "^3.23.0",
     "@tabler/icons-react": "^3.23.0",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
