--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.462.0",
     "mongoose": "^8.8.3",
     "next": "^14.2.6",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
