--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.5",
+    "ai": "^4.0.9",
     "apify-client": "^2.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
